--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,11 +2,22 @@
 <html lang="en" xmlns:th="http://www.thymeleafe.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Recipe Home</title>
 </head>
 <body>
 
-<h1>My Recipes</h1>
+<h1>My Recipes!</h1>
+
+<table>
+    <tr>
+        <th>ID</th>
+        <th>Description</th>
+    </tr>
+    <tr th:each="recipe : ${recipes}">
+        <td th:text="${recipe.id}">123</td>
+        <td th:text="${recipe.description}">Tasty Goodness</td>
+    </tr>
+</table>
 
 </body>
 </html>
